# Post-md

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  LICENSE-COMMERCIAL.md  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: make_demo_trajectory.py
src/post_md/: __init__.py  config.py  imaging.py  plotting.py  preprocess.py
src/post_md/analysis/: __init__.py  alignment.py  clustering.py  hbond.py  pca.py  rg.py  rmsd.py  rmsf.py  sasa.py
src/post_md/cli/: __init__.py  main.py
src/post_md/core/: __init__.py  atomgroup.py  selection.py  topology.py  trajectory.py  units.py  universe.py
src/post_md/io/: __init__.py  pdb.py
src/post_md/io/amber/: __init__.py  mdcrd.py  netcdf.py  prmtop.py  prmtop_writer.py
src/post_md/io/gromacs/: __init__.py  _xdr.py  gro.py  trr.py  xtc.py
src/post_md/utils/: __init__.py
src/post_md/web/: __init__.py  app.py  runners.py
src/post_md/web/templates/: index.html
tests/: conftest.py  test_alignment.py  test_analysis.py  test_cli.py  test_io_xdr.py  test_io_xtc.py  test_selection.py
